# usgs-machine-to-machine-API

./: MANIFEST.in  README.md  UsageExample.py  checkResponse.py  otherMethods.py  pyproject.toml  testing.py  usgsDataTypes.py  usgsErrors.py  usgsMethods.py
examples/: UsageExample.py
usgs_m2m/: __init__.py  checkResponse.py  otherMethods.py  usgsDataTypes.py  usgsErrors.py  usgsMethods.py
