[build-system]
requires = [
    "setuptools",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "usgs_m2m"
authors = [
    { name = "MrChebur" },
]
description = "Python wrapper of the USGS/EROS Inventory Service Machine-to-Machine API"
readme = "README.md"
version = "0.1.0"
requires-python = ">= 3.9"
dependencies = ["requests",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/MrChebur/usgs-machine-to-machine-API"
Issues = "https://github.com/MrChebur/usgs-machine-to-machine-API/issues"

[tool.setuptools.packages.find]
where = ["usgs_m2m"]